// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Decorator Should able to decorate class multiple 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [
    Object {
      "info": "Some Info",
    },
    Object {
      "otherInfo": "Some Other Info",
    },
  ],
  "kind": "Class",
  "methods": Array [],
  "name": "DummyClass",
  "properties": Array [],
  "type": DummyClass,
}
`;

exports[`Decorator Should able to decorate class using callback 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [
    Object {
      "name": "DummyClass",
    },
  ],
  "kind": "Class",
  "methods": Array [],
  "name": "DummyClass",
  "properties": Array [],
  "type": DummyClass,
}
`;

exports[`Decorator Should able to decorate constructor parameter 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [
      Object {
        "decorators": Array [
          Object {
            "info": "Some Info",
          },
        ],
        "kind": "Parameter",
        "name": "id",
        "type": Number,
      },
    ],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [],
  "name": "DummyClass",
  "properties": Array [],
  "type": DummyClass,
}
`;

exports[`Decorator Should able to decorate constructor parameter 2`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [
      Object {
        "decorators": Array [
          Object {
            "index": 0,
            "name": "constructor",
            "target": "DummyClass",
          },
        ],
        "kind": "Parameter",
        "name": "id",
        "type": Number,
      },
    ],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [],
  "name": "DummyClass",
  "properties": Array [],
  "type": DummyClass,
}
`;

exports[`Decorator Should able to decorate constructor parameter multiple 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [
      Object {
        "decorators": Array [
          Object {
            "info": "Some Info",
          },
          Object {
            "otherInfo": "Some Other Info",
          },
        ],
        "kind": "Parameter",
        "name": "id",
        "type": Number,
      },
    ],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [],
  "name": "DummyClass",
  "properties": Array [],
  "type": DummyClass,
}
`;

exports[`Decorator Should able to decorate method multiple 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [
    Object {
      "decorators": Array [
        Object {
          "info": "Some Info",
        },
        Object {
          "otherInfo": "Some Other Info",
        },
      ],
      "kind": "Method",
      "name": "method",
      "parameters": Array [],
      "returnType": undefined,
    },
  ],
  "name": "DummyClass",
  "properties": Array [],
  "type": DummyClass,
}
`;

exports[`Decorator Should able to decorate method multiple 2`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [
    Object {
      "decorators": Array [
        Object {
          "info": "Some Info",
        },
        Object {
          "otherInfo": "Some Other Info",
        },
      ],
      "kind": "Method",
      "name": "method",
      "parameters": Array [],
      "returnType": undefined,
    },
  ],
  "name": "DummyClass",
  "properties": Array [],
  "type": DummyClass,
}
`;

exports[`Decorator Should able to decorate method parameter 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "method",
      "parameters": Array [
        Object {
          "decorators": Array [
            Object {
              "info": "Some Info",
            },
          ],
          "kind": "Parameter",
          "name": "id",
          "type": Number,
        },
      ],
      "returnType": undefined,
    },
  ],
  "name": "DummyClass",
  "properties": Array [],
  "type": DummyClass,
}
`;

exports[`Decorator Should able to decorate method parameter multiple 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "method",
      "parameters": Array [
        Object {
          "decorators": Array [
            Object {
              "info": "Some Info",
            },
            Object {
              "otherInfo": "Some Other Info",
            },
          ],
          "kind": "Parameter",
          "name": "id",
          "type": Number,
        },
      ],
      "returnType": undefined,
    },
  ],
  "name": "DummyClass",
  "properties": Array [],
  "type": DummyClass,
}
`;

exports[`Decorator Should able to decorate method parameter with callback 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "method",
      "parameters": Array [
        Object {
          "decorators": Array [
            Object {
              "index": 0,
              "name": "method",
              "target": "DummyClass",
            },
          ],
          "kind": "Parameter",
          "name": "id",
          "type": Number,
        },
      ],
      "returnType": undefined,
    },
  ],
  "name": "DummyClass",
  "properties": Array [],
  "type": DummyClass,
}
`;

exports[`Decorator Should able to merge decorator 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [
      Object {
        "decorators": Array [],
        "kind": "Parameter",
        "name": "data",
        "type": String,
      },
    ],
  },
  "decorators": Array [
    Object {
      "type": "Cache",
    },
    Object {
      "type": "ParameterProperties",
    },
  ],
  "kind": "Class",
  "methods": Array [],
  "name": "DummyClass",
  "properties": Array [
    Object {
      "decorators": Array [],
      "get": undefined,
      "kind": "Property",
      "name": "data",
      "set": undefined,
      "type": String,
    },
  ],
  "type": DummyClass,
}
`;

exports[`Decorator Should decorate class 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [
    Object {
      "info": "Some Info",
    },
  ],
  "kind": "Class",
  "methods": Array [],
  "name": "DummyClass",
  "properties": Array [],
  "type": DummyClass,
}
`;

exports[`Decorator Should decorate class, properties and parameter 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [
    Object {},
  ],
  "kind": "Class",
  "methods": Array [
    Object {
      "decorators": Array [
        Object {},
      ],
      "kind": "Method",
      "name": "myFunction",
      "parameters": Array [
        Object {
          "decorators": Array [
            Object {},
          ],
          "kind": "Parameter",
          "name": "par",
          "type": String,
        },
      ],
      "returnType": undefined,
    },
  ],
  "name": "DummyClass",
  "properties": Array [
    Object {
      "decorators": Array [
        Object {},
      ],
      "get": undefined,
      "kind": "Property",
      "name": "myProp",
      "set": undefined,
      "type": Object,
    },
  ],
  "type": DummyClass,
}
`;

exports[`Decorator Should decorate method 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [
    Object {
      "decorators": Array [
        Object {
          "info": "Some Info",
        },
      ],
      "kind": "Method",
      "name": "method",
      "parameters": Array [],
      "returnType": undefined,
    },
  ],
  "name": "DummyClass",
  "properties": Array [],
  "type": DummyClass,
}
`;

exports[`Decorator Should decorate method 2`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [
    Object {
      "decorators": Array [
        Object {
          "info": "Some Info",
        },
      ],
      "kind": "Method",
      "name": "method",
      "parameters": Array [],
      "returnType": undefined,
    },
  ],
  "name": "DummyClass",
  "properties": Array [],
  "type": DummyClass,
}
`;

exports[`Decorator Should decorate method with callback 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [
    Object {
      "decorators": Array [
        Object {
          "method": "method",
          "target": "DummyClass",
        },
      ],
      "kind": "Method",
      "name": "method",
      "parameters": Array [],
      "returnType": undefined,
    },
  ],
  "name": "DummyClass",
  "properties": Array [],
  "type": DummyClass,
}
`;

exports[`Decorator Should decorate method with callback 2`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [
    Object {
      "decorators": Array [
        Object {
          "method": "method",
          "target": "DummyClass",
        },
      ],
      "kind": "Method",
      "name": "method",
      "parameters": Array [],
      "returnType": undefined,
    },
  ],
  "name": "DummyClass",
  "properties": Array [],
  "type": DummyClass,
}
`;

exports[`Decorator Should inspect class with get set 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [],
  "name": "DummyClass",
  "properties": Array [
    Object {
      "decorators": Array [],
      "get": get data,
      "kind": "Property",
      "name": "data",
      "set": set data,
      "type": undefined,
    },
  ],
  "type": DummyClass,
}
`;

exports[`Decorator Should inspect class with get set with decorator 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [],
  "name": "DummyClass",
  "properties": Array [
    Object {
      "decorators": Array [
        Object {},
      ],
      "get": get data,
      "kind": "Property",
      "name": "data",
      "set": set data,
      "type": Number,
    },
  ],
  "type": DummyClass,
}
`;

exports[`Decorator Should inspect class with get set with decorator callback 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [],
  "name": "DummyClass",
  "properties": Array [
    Object {
      "decorators": Array [
        Object {
          "name": "data",
          "target": DummyClass,
        },
      ],
      "get": get data,
      "kind": "Property",
      "name": "data",
      "set": set data,
      "type": Number,
    },
  ],
  "type": DummyClass,
}
`;

exports[`Decorator Should inspect class with get set with decorator multiple 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [],
  "name": "DummyClass",
  "properties": Array [
    Object {
      "decorators": Array [
        Object {
          "value": 2,
        },
        Object {
          "value": 1,
        },
      ],
      "get": get data,
      "kind": "Property",
      "name": "data",
      "set": set data,
      "type": Number,
    },
  ],
  "type": DummyClass,
}
`;

exports[`Decorator Should inspect class with properties 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [],
  "name": "DummyClass",
  "properties": Array [
    Object {
      "decorators": Array [
        Object {},
      ],
      "get": undefined,
      "kind": "Property",
      "name": "dummyProp",
      "set": undefined,
      "type": String,
    },
  ],
  "type": DummyClass,
}
`;

exports[`Decorator Should inspect class with properties multiple 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [],
  "name": "DummyClass",
  "properties": Array [
    Object {
      "decorators": Array [
        Object {
          "value": 2,
        },
        Object {
          "value": 1,
        },
      ],
      "get": undefined,
      "kind": "Property",
      "name": "dummyProp",
      "set": undefined,
      "type": String,
    },
  ],
  "type": DummyClass,
}
`;

exports[`Decorator Should inspect class with properties with callback 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [],
  "name": "DummyClass",
  "properties": Array [
    Object {
      "decorators": Array [
        Object {
          "name": "dummyProp",
          "target": DummyClass,
        },
      ],
      "get": undefined,
      "kind": "Property",
      "name": "dummyProp",
      "set": undefined,
      "type": String,
    },
  ],
  "type": DummyClass,
}
`;

exports[`Decorator Should inspect constructor property 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [
      Object {
        "decorators": Array [],
        "kind": "Parameter",
        "name": "data",
        "type": String,
      },
    ],
  },
  "decorators": Array [
    Object {
      "type": "ParameterProperties",
    },
  ],
  "kind": "Class",
  "methods": Array [],
  "name": "DummyClass",
  "properties": Array [
    Object {
      "decorators": Array [],
      "get": undefined,
      "kind": "Property",
      "name": "data",
      "set": undefined,
      "type": String,
    },
  ],
  "type": DummyClass,
}
`;

exports[`Decorator Should inspect constructor property with decorator 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [
      Object {
        "decorators": Array [
          Object {},
        ],
        "kind": "Parameter",
        "name": "data",
        "type": String,
      },
    ],
  },
  "decorators": Array [
    Object {
      "type": "ParameterProperties",
    },
  ],
  "kind": "Class",
  "methods": Array [],
  "name": "DummyClass",
  "properties": Array [
    Object {
      "decorators": Array [
        Object {},
      ],
      "get": undefined,
      "kind": "Property",
      "name": "data",
      "set": undefined,
      "type": String,
    },
  ],
  "type": DummyClass,
}
`;

exports[`Decorator Should inspect constructor property with decorator callback 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [
      Object {
        "decorators": Array [
          Object {
            "name": "constructor",
            "target": DummyClass,
          },
        ],
        "kind": "Parameter",
        "name": "data",
        "type": String,
      },
    ],
  },
  "decorators": Array [
    Object {
      "type": "ParameterProperties",
    },
  ],
  "kind": "Class",
  "methods": Array [],
  "name": "DummyClass",
  "properties": Array [
    Object {
      "decorators": Array [
        Object {
          "name": "constructor",
          "target": DummyClass,
        },
      ],
      "get": undefined,
      "kind": "Property",
      "name": "data",
      "set": undefined,
      "type": String,
    },
  ],
  "type": DummyClass,
}
`;

exports[`Decorator Should inspect constructor property with decorator multiple 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [
      Object {
        "decorators": Array [
          Object {
            "value": 2,
          },
          Object {
            "value": 1,
          },
        ],
        "kind": "Parameter",
        "name": "data",
        "type": String,
      },
    ],
  },
  "decorators": Array [
    Object {
      "type": "ParameterProperties",
    },
  ],
  "kind": "Class",
  "methods": Array [],
  "name": "DummyClass",
  "properties": Array [
    Object {
      "decorators": Array [
        Object {
          "value": 2,
        },
        Object {
          "value": 1,
        },
      ],
      "get": undefined,
      "kind": "Property",
      "name": "data",
      "set": undefined,
      "type": String,
    },
  ],
  "type": DummyClass,
}
`;

exports[`Decorator Should not inspect private constructor property 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [
      Object {
        "decorators": Array [],
        "kind": "Parameter",
        "name": "data",
        "type": String,
      },
      Object {
        "decorators": Array [
          Object {
            "kind": "Ignore",
          },
        ],
        "kind": "Parameter",
        "name": "myPrivateField",
        "type": String,
      },
    ],
  },
  "decorators": Array [
    Object {
      "type": "ParameterProperties",
    },
  ],
  "kind": "Class",
  "methods": Array [],
  "name": "DummyClass",
  "properties": Array [
    Object {
      "decorators": Array [],
      "get": undefined,
      "kind": "Property",
      "name": "data",
      "set": undefined,
      "type": String,
    },
  ],
  "type": DummyClass,
}
`;
